# NFTYieldFarming-Substrate

./: .gitignore  CODEOWNERS  CONTRIBUTING.md  Cargo.toml  README.md  customSpecRaw.json  docker-compose.yml  package.json  redspot.config.ts  rustfmt.toml  tsconfig.json  typedef.json
contracts/claimable-media/: Cargo.toml
contracts/claimable-media/src/: constants.rs  errors.rs  lib.rs  models.rs
contracts/erc1155/: Cargo.toml  lib.rs
contracts/erc1620/: Cargo.toml  lib.rs
contracts/erc20/: Cargo.toml  README.md  lib.rs
contracts/erc721/: Cargo.toml  lib.rs
contracts/exchange/: Cargo.toml  README.md
contracts/exchange/src/: contract.rs  lib.rs  model.rs
contracts/htlc-atomic-swap/: Cargo.toml
contracts/htlc-atomic-swap/src/: lib.rs  model.rs
contracts/media/: Cargo.toml
contracts/media/src/: constants.rs  errors.rs  lib.rs  models.rs
contracts/pod-auction/: Cargo.toml  README.md
contracts/pod-auction/src/: lib.rs  models.rs
contracts/pod-media-investing/: Cargo.toml
contracts/pod-media-investing/src/: errors.rs  lib.rs  models.rs
contracts/pod-media-regular/: Cargo.toml
contracts/pod-media-regular/src/: errors.rs  lib.rs  models.rs
contracts/social-token/: Cargo.toml  README.md
contracts/social-token/reference/: FundingToken.sol  SocialToken.rtf  SocialToken.sol
contracts/social-token/reference/social-token-go/: AMM.go  SocialToken.go  constants.go  helpers.go  models.go  utils.go
contracts/social-token/src/: amm.rs  contract.rs  lib.rs
contracts/stable-coin/: Cargo.toml
contracts/stable-coin/src/: errors.rs  lib.rs  models.rs
contracts/token-accounts/: Cargo.toml  README.md  lib.rs
libs/amm/: Cargo.toml
libs/amm/src/: lib.rs
libs/contract-utils/: Cargo.toml
libs/contract-utils/src/: constants.rs  lib.rs  log.rs  math.rs  test_utils.rs  time.rs  token.rs
libs/multi-token/: Cargo.toml  README.md
libs/multi-token/src/: lib.rs  unique.rs
node/: Cargo.toml
node/src/: chain_spec.rs  command.rs  rpc.rs  service.rs
reference/: additional-types.json  contract-info.md
reference/docs/: Contract-Storage-Rent-Doc.md  npos-consensus.md  privi-btc-bridge-design.md
reference/docs/chainbridge/: cb-sol-cli.md  chainbridge.md  docker-compose-geth.yml
reference/metadata/: erc1155.metadata.json  exchange.metadata.json  htlc_atomic_swap.metadata.json  pod_auction.json  pod_media.metadata.json  risk_reserve_privi.json  token_accounts.metadata.json
runtime/: Cargo.toml
runtime/src/: lib.rs
scripts/: build-artifacts.sh  build-contract.sh  docker_run.sh  test.sh
scripts/deploy/: deploy.ts  deployErc1620.ts  deployErc721.ts  deployExchange.ts  deployHtlcAtomicSwap.ts  deployMedia.ts  deployStableCoin.ts  deployTokenAccounts.ts  summary.ts  utils.ts
tests/: claimable-media.test.ts  erc1620.test.ts  erc20.test.ts  exchange.test.ts  htlc-atomic-swap.test.ts  pod-auction.test.ts  pod-media-investing.test.ts  pod-media-regular.test.ts  stable-coin.test.ts
