[package]
authors = ['Privi']
build = 'build.rs'
description = 'The Privi node'
edition = '2018'
homepage = 'https://priviprotocol.io/'
license = 'Unlicense'
name = 'privi-node'
repository = 'https://github.com/Privi-Protocol/Privi-Substrate'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[[bin]]
name = 'privi-node'
path = "src/main.rs"

[dependencies]
structopt = "0.3.8"

sc-cli = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', features = ["wasmtime"] }
sc-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sc-consensus-aura = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sc-executor = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', features = ["wasmtime"] }
sc-finality-grandpa = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sc-keystore = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-service = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git', features = ["wasmtime"] }
sc-telemetry = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }

sc-client-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-consensus = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sp-consensus-aura = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sp-core = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-inherents = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-finality-grandpa = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-runtime = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-timestamp = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-transaction-pool = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }

# RPCs
jsonrpc-core = "15.1.0"
pallet-contracts  = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0' }
pallet-contracts-rpc  = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0' }
pallet-transaction-payment-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-rpc = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-api = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-rpc-api = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
sp-blockchain = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sp-block-builder = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }
sc-basic-authorship = { version = "0.9.0", git = 'https://github.com/paritytech/substrate.git' }
substrate-frame-rpc-system = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }

# local
privi-runtime = { version = "3.0.0", path = "../runtime" }

# benchmarking
frame-benchmarking = { version = "3.1.0", git = 'https://github.com/paritytech/substrate.git' }
frame-benchmarking-cli = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }

[build-dependencies]
substrate-build-script-utils = { version = "3.0.0", git = 'https://github.com/paritytech/substrate.git' }

[features]
default = []
runtime-benchmarks = [
	"privi-runtime/runtime-benchmarks",
]
