[package]
authors = ['Substrate DevHub <https://github.com/substrate-developer-hub>']
edition = '2018'
homepage = 'https://substrate.dev'
license = 'Unlicense'
name = 'privi-runtime'
repository = 'https://github.com/Privi-Protocol/Privi-Substrate/'
version = '3.0.0'

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
# primitives
sp-api = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-block-builder = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-consensus-aura = { git = 'https://github.com/paritytech/substrate.git', version = '0.9.0', default-features = false }
sp-core = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-inherents = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-offchain = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-runtime = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-session = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-std = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-transaction-pool = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
sp-version = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }

# frame
frame-executive = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
frame-support = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
frame-system = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
frame-system-rpc-runtime-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git' }
pallet-aura = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-balances = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-contracts = { git = 'https://github.com/paritytech/substrate.git', default-features = false, version = '3.0.0' }
pallet-contracts-primitives = { git = 'https://github.com/paritytech/substrate.git', default-features = false, version = '3.0.0' }
pallet-contracts-rpc-runtime-api = { git = 'https://github.com/paritytech/substrate.git', default-features = false, version = '3.0.0' }
pallet-grandpa = { git = 'https://github.com/paritytech/substrate.git', version = '3.1.0', default-features = false }
pallet-randomness-collective-flip = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-sudo = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-timestamp = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-transaction-payment = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false }
pallet-transaction-payment-rpc-runtime-api = { version = "3.0.0", default-features = false, git = 'https://github.com/paritytech/substrate.git' }

# third party
codec = { package = "parity-scale-codec", version = "2.0.0", default-features = false, features = ["derive"] }

# Used for runtime benchmarking
frame-benchmarking = { git = 'https://github.com/paritytech/substrate.git', version = '3.1.0', default-features = false, optional = true }
frame-system-benchmarking = { git = 'https://github.com/paritytech/substrate.git', version = '3.0.0', default-features = false, optional = true }
hex-literal = { version = "0.3.1", optional = true }

[build-dependencies]
substrate-wasm-builder = { git = 'https://github.com/paritytech/substrate.git', version = '4.0.0' }

[features]
default = ["std"]
std = [
	"codec/std",
	"frame-executive/std",
	"frame-support/std",
	"frame-system-rpc-runtime-api/std",
	"frame-system/std",
	"pallet-aura/std",
	"pallet-balances/std",
	"pallet-grandpa/std",
	"pallet-randomness-collective-flip/std",
	"pallet-sudo/std",
	"pallet-timestamp/std",
	"pallet-transaction-payment-rpc-runtime-api/std",
	"pallet-transaction-payment/std",
	"sp-api/std",
	"sp-block-builder/std",
	"sp-consensus-aura/std",
	"sp-core/std",
	"sp-inherents/std",
	"sp-offchain/std",
	"sp-runtime/std",
	"sp-session/std",
	"sp-std/std",
	"sp-transaction-pool/std",
	"sp-version/std",
	"pallet-contracts/std",
	"pallet-contracts-primitives/std",
	"pallet-contracts-rpc-runtime-api/std",
]
runtime-benchmarks = [
	"frame-benchmarking",
	"frame-support/runtime-benchmarks",
	"frame-system-benchmarking",
	"frame-system/runtime-benchmarks",
	"hex-literal",
	"pallet-balances/runtime-benchmarks",
	"pallet-timestamp/runtime-benchmarks",
	"sp-runtime/runtime-benchmarks",
	"pallet-contracts/runtime-benchmarks",
]
