[package]
name = "claimable_media"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

err-derive = { version = "0.3.0", default-features = false }

contract-utils = { path = "../../libs/contract-utils", default-features = false }
media = { path = "../media", default-features = false, features = ["ink-as-dependency"] }
erc1620 = { path = "../erc1620", default-features = false, features = ["ink-as-dependency"] }
erc20 = { path = "../erc20", default-features = false, features = ["ink-as-dependency"] }

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[lib]
name = "claimable_media"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib"
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",
    "contract-utils/std",
    "media/std",
]
ink-as-dependency = []
