[package]
name = "media"
version = "3.0.0-rc3"
authors = ["Privi"]
edition = "2018"

[package.metadata.contract]
optimization-passes = "z"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6", default-features = false, features = ["derive"], optional = true }

erc20 = { path = "../erc20", default-features = false, features = ["ink-as-dependency"] }
erc1620 = { path = "../erc1620", default-features = false, features = ["ink-as-dependency"] }
erc721 = { path = "../erc721", default-features = false, features = ["ink-as-dependency"] }
contract-utils = { path = "../../libs/contract-utils", default-features = false, features = ["decimal"] }

err-derive = { version = "0.3.0", default-features = false }
derive-new = { version = "0.5", default-features = false }
cfg-if = "1.0.0"

[profile.dev]
overflow-checks = false

[profile.release]
overflow-checks = false

[lib]
name = "media"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata",
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info",
    "scale-info/std",
    "ink_prelude/std",
    "erc1620/std",
    "erc20/std",
    "erc721/std",
    "contract-utils/std",
]
ink-as-dependency = []

