[package]
name = "pod_auction"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_prelude = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

contract-utils = { path = "../../libs/contract-utils", default-features = false }
multi-token = { path = "../../libs/multi-token", default-features = false, features = ["token-accounts"] }

cfg-if = "1.0.0"
err-derive = { version = "0.3.0", default-features = false }

[lib]
name = "pod_auction"
path = "src/lib.rs"
crate-type = ["cdylib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_prelude/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "contract-utils/std",
    "multi-token/std"
]
ink-as-dependency = []


[profile.release]
overflow-checks = false
