[package]
name = "pod-media-regular"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"

[dependencies]
ink_prelude = { version = "3.0.0-rc3", default-features = false }
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

amm = { path = "../../libs/amm", default-features = false }
erc20 = { path = "../../contracts/erc20", default-features = false, features = ["ink-as-dependency"] }
erc721 = { path = "../../contracts/erc721", default-features = false, features = ["ink-as-dependency"] }
contract-utils = { path = "../../libs/contract-utils", default-features = false }
media = { path = "../media", default-features = false, features = ["ink-as-dependency"] }

err-derive = { version = "0.3.0", default-features = false }
cfg-if = "1.0.0"

[lib]
name = "pod_media_regular"
path = "src/lib.rs"
crate-type = [
	# Used for normal contract Wasm blobs.
	"cdylib",
    "rlib",
]

[features]
default = ["std"]
std = [
    "ink_metadata/std",
    "ink_env/std",
    "ink_storage/std",
    "ink_primitives/std",
    "scale/std",
    "scale-info/std",

    "amm/std",
    "media/std",
    "erc20/std",
    "erc721/std",
    "contract-utils/std"
]
ink-as-dependency = []

[profile.release]
overflow-checks = false