[package]
name = "contract-utils"
version = "0.1.0"
authors = ["Privi"]
edition = "2018"
resolver = "2"

[lib]
name = "contract_utils"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[dependencies]
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.0.0-rc3", default-features = false, optional = true }
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

rust_decimal = { version = "1.13", default-features = false, features = ["maths"], optional = true }

[dev-dependencies]
rust_decimal_macros = { version = "1.13", default-features = false }


[features]
default = ["std"]
std = [
    "ink_env/std",
    "ink_lang/std",
    "ink_metadata/std",
    "ink_prelude/std",
    "ink_primitives/std",
    "scale/std",
    "ink_storage/std",
    "scale-info/std"
]
decimal = [
    "ink_prelude",
    "rust_decimal",
]
# adds test_utils module
test-utils = []