[package]
name = "multi-token"
version = "0.1.0"
authors = ["[your_name] <[your_email]>"]
edition = "2018"
resolver = "2"

[dependencies]
ink_primitives = { version = "3.0.0-rc3", default-features = false }
ink_metadata = { version = "3.0.0-rc3", default-features = false, features = ["derive"], optional = true }
ink_prelude = { version = "3.0.0-rc3", default-features = false }
ink_env = { version = "3.0.0-rc3", default-features = false }
ink_storage = { version = "3.0.0-rc3", default-features = false }
ink_lang = { version = "3.0.0-rc3", default-features = false }

scale = { package = "parity-scale-codec", version = "2.1", default-features = false, features = ["derive"] }
scale-info = { version = "0.6.0", default-features = false, features = ["derive"], optional = true }

# Should be removed once bitvecto-rs/bitvec#105 is resolved
funty = "=1.1.0"

contract-utils = { path = "../../libs/contract-utils", default-features = false }
err-derive = { version = "0.3.0", default-features = false }
erc20 = { path = "../../contracts/erc20", default-features = false, features = ["ink-as-dependency"] }
erc721 = { path = "../../contracts/erc721", default-features = false, features = ["ink-as-dependency"] }
erc1155 = { path = "../../contracts/erc1155", default-features = false, features = ["ink-as-dependency"] }
token-accounts = { path = "../../contracts/token-accounts", default-features = false, features = ["ink-as-dependency"], optional = true}

[dev-dependencies]
contract-utils = { path = "../../libs/contract-utils", features = ["test-utils"] }

[lib]
name = "multi_token"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]

[features]
default = ["std"]
std = [
    "ink_primitives/std",
    "ink_metadata/std",
    "ink_env/std",
    "ink_prelude/std",
    "ink_storage/std",
    "ink_lang/std",
    "scale/std",
    "scale-info/std",
    "contract-utils/std",
    "erc20/std",
    "erc721/std",
    "erc1155/std",
    "token-accounts/std"
]

#ink-as-dependency = [
#    "erc20-mint-burn-role/ink-as-dependency",
#    "erc721/ink-as-dependency",
#    "erc1155/ink-as-dependency"
#]